--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "eslint-plugin-import": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-eslint": "^3.0.1",
+    "gulp-inject": "^4.1.0",
+    "gulp-nodemon": "^2.2.1",
     "wiredep": "^4.0.0"
   }
 }
