--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "author": "Van J. Wilson <van.wilson1992@alumni.unc.edu>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "jade": "^1.11.0"
   },
   "devDependencies": {
     "eslint": "^3.10.0",
