--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.13.3",
-    "jade": "^1.11.0"
+    "express-handlebars": "^3.0.0"
   },
   "devDependencies": {
     "eslint": "^3.10.0",
