Use EJS templating

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "Van J. Wilson <van.wilson1992@alumni.unc.edu>",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.13.3",
-    "express-handlebars": "^3.0.0"
+    "ejs": "^2.5.2",
+    "express": "^4.13.3"
   },
   "devDependencies": {
     "eslint": "^3.10.0",
