Add GoodReads service to pull descriptions and images

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongodb": "^2.2.11",
     "mssql": "^3.3.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "xml2js": "^0.4.17"
   },
   "devDependencies": {
     "eslint": "^3.10.0",
